--- a/.env
+++ b/.env
@@ -13,6 +13,8 @@ TZ = 'Asia/Karachi'
 CLOVYR_APPNAME = 'code-ubuntu-1'
 CLOVYR_URL = 'serious-renard-5w65wkmpoihx3443d5iq.wnext.app'
 CLOVYR_COOKIE = ''
+cookie = '1QQnqnxJmprWN5yKTLRWAofoy8ceWukLU5Y08b0UiXS5f2-nH-PoXOFxH_EXNi7_aqft77QV3yZElszWoePdkAe7uggtZADO4IknAmMbfgWFOcF_oUpYr-Ty20rIu5gu8F-Ro_nMzYkC77YJDSbcLPbEgKA057fD_yURgDsXcuc7Om23hj1wL-0eHJCool8zQobQRuhgJLoENgP6qwxuH9nidX6OEdZ7cUKaImPXD32A'
+
 
 ## username: 1133758043851595906 https://discord.gg/r5QWdKfQxr
 RSGPT = 'rsnai_jbx4I7g0NGiXwvYGk3of8IHI'
