--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ API_KEY = 'ibrahim11'
 
 
 ### Database : https://www.mongodb.com/
-DATABASE_URL = 'postgresql://postgres.jucqhzxciaqkiftiwwok:Hiba@marijan09@aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres'
+DATABASE_URL = 'postgresql://postgres.pgroqbezubhqqegzhygy:Hiba@marijan09@aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres'
 
 ### Timezone (Important)
 TZ = 'Asia/Karachi'
