--- a/.env
+++ b/.env
@@ -19,3 +19,4 @@ cookie = '1QQnqnxJmprWN5yKTLRWAofoy8ceWukLU5Y08b0UiXS5f2-nH-PoXOFxH_EXNi7_aqft77
 ## username: 1133758043851595906 https://discord.gg/r5QWdKfQxr
 RSGPT = 'rsnai_jbx4I7g0NGiXwvYGk3of8IHI'
 OPENAI_API_KEY = ''
+botNumber = '447375237255'
