--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
       "g4f": "1.4.6",
       "y2mate-dl": "1.0.4",
       "readline": "1.3.0",
+      "nayan-video-downloader": "0.0.2",
       "node-schedule": "^2.1.1",
       "bing-images": "1.0.0",
       "custom-google-play-scraper": "1.0.5",
