--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ API_KEY = 'ibrahim11'
 
 
 ### Database : https://www.mongodb.com/
-DATABASE_URL = 'postgresql://postgres.jaqxwapuicqcauunxvfp:Hiba@marijan09@aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres'
+DATABASE_URL = 'mongodb+srv://Ibrahim:ibrahim@neoxr-bot.cmaet.mongodb.net/?retryWrites=true&w=majority&appName=Neoxr-bot'
 
 ### Timezone (Important)
 TZ = 'Asia/Karachi'
