--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
       "pornhub.js": "1.12.1",
       "aptoide-scraper": "1.0.1",
       "@xct007/frieren-scraper": "^0.0.2",
-      "yt-search": "2.11.1"
+      "yt-search": "2.11.1",
+      "ruhend-scraper": "^8.0.8"
    }
 }
