--- a/package.json
+++ b/package.json
@@ -25,16 +25,17 @@
    },
    "homepage": "https://github.com/neoxr/neoxr-bot#readme",
    "dependencies": {
-      "@adiwajshing/baileys": "npm:@neoxr/baileys@7.6.3",
+      "@adiwajshing/baileys": "npm:@neoxr/baileys@7.6.5",
       "@adiwajshing/keyed-db": "^0.2.4",
       "@colors/colors": "^1.6.0",
-      "@neoxr/wb": "^4.7.8",
+      "@neoxr/wb": "^4.7.10",
       "@neoxr/youtube-scraper": "^3.1.5",
       "bytes": "^3.1.2",
       "cfonts": "3.1.1",
       "express": "~4.16.4",
       "jimp": "^0.22.12",
       "json-stable-stringify": "^1.0.2",
+      "libsignal": "github:WhiskeySockets/libsignal-node",
       "node-cron": "^3.0.0",
       "node-gtts": "^2.0.2",
       "qrcode": "1.5.0",
