--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ API_KEY = 'ibrahim11'
 
 
 ### Database : https://www.mongodb.com/
-DATABASE_URL = 'mongodb+srv://Ibrahim:ibrahim@neoxr-bot.cmaet.mongodb.net/?retryWrites=true&w=majority&appName=Neoxr-bot'
+DATABASE_URL = ''
 
 ### Timezone (Important)
 TZ = 'Asia/Karachi'
