--- a/.env
+++ b/.env
@@ -10,10 +10,10 @@ DATABASE_URL = ''
 TZ = 'Asia/Karachi'
 
 ### Clovyr : https://clovyr.io/
-CLOVYR_APPNAME = 'code-ubuntu-1'
-CLOVYR_URL = 'serious-renard-5w65wkmpoihx3443d5iq.wnext.app'
+CLOVYR_APPNAME = ''
+CLOVYR_URL = ''
 CLOVYR_COOKIE = ''
-cookie = '1QQnqnxJmprWN5yKTLRWAofoy8ceWukLU5Y08b0UiXS5f2-nH-PoXOFxH_EXNi7_aqft77QV3yZElszWoePdkAe7uggtZADO4IknAmMbfgWFOcF_oUpYr-Ty20rIu5gu8F-Ro_nMzYkC77YJDSbcLPbEgKA057fD_yURgDsXcuc7Om23hj1wL-0eHJCool8zQobQRuhgJLoENgP6qwxuH9nidX6OEdZ7cUKaImPXD32A'
+cookie = ''
 
 
 ## username: 1133758043851595906 https://discord.gg/r5QWdKfQxr
