--- a/package.json
+++ b/package.json
@@ -24,17 +24,16 @@
    },
    "homepage": "https://github.com/neoxr/neoxr-bot#readme",
    "dependencies": {
-      "@adiwajshing/baileys": "npm:@neoxr/baileys@7.6.9",
+      "@adiwajshing/baileys": "npm:@neoxr/baileys@7.6.13",
       "@adiwajshing/keyed-db": "^0.2.4",
       "@colors/colors": "^1.6.0",
-      "@neoxr/wb": "^4.7.11",
-      "@neoxr/youtube-scraper": "^3.1.5",
-      "bytes": "^3.1.2",
+      "@database/mongo": "github:neoxr/database#mongo",
+      "@database/postgres": "github:neoxr/database#postgresql",
+      "@neoxr/wb": "^5.0.3",
+      "@session/mongo": "github:neoxr/session#mongo",
+      "@session/postgres": "github:neoxr/session#postgresql",
       "cfonts": "3.1.1",
-      "express": "~4.16.4",
-      "jimp": "^0.22.12",
-      "json-stable-stringify": "^1.0.2",
-      "libsignal": "github:WhiskeySockets/libsignal-node",
+      "html-entities": "^2.5.2",
       "node-cron": "^3.0.0",
       "node-gtts": "^2.0.2",
       "qrcode": "1.5.0",
