--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ API_KEY = 'ibrahim11'
 
 
 ### Database : https://www.mongodb.com/
-DATABASE_URL = ''
+DATABASE_URL = 'mongodb+srv://Ibrahim:ibrahim@cluster0.zbguk6o.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
 
 ### Timezone (Important)
 TZ = 'Asia/Karachi'
