--- a/.env
+++ b/.env
@@ -8,6 +8,7 @@ DATABASE_URL = 'mongodb+srv://Ibrahim:ibrahim@cluster0.zbguk6o.mongodb.net/?retr
 
 ### Timezone (Important)
 TZ = 'Asia/Karachi'
+limit = 15
 
 ### Clovyr : https://clovyr.io/
 CLOVYR_APPNAME = ''
