--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
    },
    "homepage": "https://github.com/neoxr/neoxr-bot#readme",
    "dependencies": {
-      "@adiwajshing/baileys": "npm:baileys@6.7.16",
+      "@adiwajshing/baileys": "npm:@neoxr/baileys@7.6.13",
       "@adiwajshing/keyed-db": "^0.2.4",
       "@colors/colors": "^1.6.0",
       "@database/mongo": "github:neoxr/database#mongo",
       "@database/postgres": "github:neoxr/database#postgresql",
-      "@neoxr/wb": "^5.0.7",
+      "@neoxr/wb": "^5.0.3",
       "@session/mongo": "github:neoxr/session#mongo",
       "@session/postgres": "github:neoxr/session#postgresql",
       "cfonts": "3.1.1",
